@@ -2,6 +2,7 @@
 Added push-bos-eos which annotates forests with <s> </s>. Use with no-bos-eos options for ngram/variational features.
 Added prune-edge which prunes forests wrt # of edges for each node.
 Randomize hill-climbing for oracle computation.
+Incompatible change: word-penalty feature do not count <s> </s> as a "word"
 Bugfix: when assigned weights or weights-one, do not perform "assign"
 Bugfix: prune-kbest will not "prune" when we cannot generate suffixient # of kbests.
 
